<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_red_light"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainAppContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:id="@+id/space4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/logoWalkInPal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/logoWalkInPal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/contentdesc_walkinpallogo"
            app:layout_constraintBottom_toTopOf="@+id/space5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space4"
            app:srcCompat="@drawable/logowalkinpal" />


        <Space
            android:id="@+id/space5"
            android:layout_width="373dp"
            android:layout_height="74dp"
            app:layout_constraintBottom_toTopOf="@+id/emailField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoWalkInPal" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#FFA4A4"
            app:layout_constraintBottom_toTopOf="@+id/entEmailtxt"
            app:layout_constraintEnd_toEndOf="@+id/entEmailtxt"
            app:layout_constraintStart_toStartOf="@+id/entEmailtxt"
            app:layout_constraintTop_toBottomOf="@+id/space5" />

        <TextView
            android:id="@+id/entEmailtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/passField"
            app:layout_constraintEnd_toEndOf="@+id/passField"
            app:layout_constraintStart_toStartOf="@+id/passField"
            app:layout_constraintTop_toBottomOf="@+id/emailField" />

        <EditText
            android:id="@+id/passField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColorHint="#FFA4A4"
            app:layout_constraintBottom_toTopOf="@+id/entPasswordtxt"
            app:layout_constraintEnd_toEndOf="@+id/entPasswordtxt"
            app:layout_constraintStart_toStartOf="@+id/entPasswordtxt"
            app:layout_constraintTop_toBottomOf="@+id/entEmailtxt" />

        <TextView
            android:id="@+id/entPasswordtxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_password"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/LoginButton"
            app:layout_constraintEnd_toEndOf="@+id/LoginButton"
            app:layout_constraintStart_toStartOf="@+id/LoginButton"
            app:layout_constraintTop_toBottomOf="@+id/passField" />


        <Button
            android:id="@+id/LoginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="2dp"
            android:background="#E0272E"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textColorHint="#00F00606"
            app:layout_constraintBottom_toTopOf="@+id/space6"
            app:layout_constraintEnd_toEndOf="@+id/space6"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toBottomOf="@+id/entPasswordtxt" />


        <Space
            android:id="@+id/space6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
            app:layout_constraintEnd_toEndOf="@+id/space5"
            app:layout_constraintStart_toStartOf="@+id/space5"
            app:layout_constraintTop_toBottomOf="@+id/LoginButton" />


        <Button
            android:id="@+id/SignUpButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="58dp"
            android:background="#E0272E"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/space6"
            app:layout_constraintStart_toStartOf="@+id/space6"
            app:layout_constraintTop_toBottomOf="@+id/space6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>