<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainAppContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoWalkInPal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/contentdesc_walkinpallogo"
                app:srcCompat="@drawable/logowalkinpal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <TextView
                android:id="@+id/entServicetxt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Service Name:"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/entService"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/prompt_lastname"
                android:ems="10"
                android:hint="Injection"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="#FFA4A4" />

            <TextView
                android:id="@+id/updateRoletxt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Service Provider (Role)"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/entRole"
                android:layout_width="253dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="@string/prompt_firstname"
                android:ems="10"
                android:hint="Nurse"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="#FFA4A4" />

            <Button
                android:id="@+id/addService"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:background="#E0272E"
                android:text="ADD SERVICE"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#E0272E"
                android:text="back to service list"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
